[package]
name = "blake2s_simd"
version = "0.1.0"
authors = ["Jack O'Connor"]
description = "EXPERIMENTAL"
license = "MIT"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
arrayref = "0.3.5"
arrayvec = { version = "0.4.7", default-features = false, features = ["use_union"] }
byteorder = { version = "1.2.4", default-features = false }
constant_time_eq = "0.1.3"

[dev-dependencies]
hex = "0.3.2"
lazy_static = "1.1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.30"
